--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,7 @@ New in 1.0b:
   modules.
 * Allow configure.in to change the defaults for AM_PROG_LIBTOOL's
   `--enable-{shared,static}' by setting `enable_{shared,static}=no'.
+* Suppress duplicate compiler output during `compile' mode.
 
 New in 1.0:
 * Bug fixes.
