--- a/NEWS
+++ b/NEWS
@@ -2,20 +2,21 @@ NEWS - list of user-visible changes between releases of GNU libtool.
 
 New in 1.0b:
 * Bug fixes.
-* Full support for broken collect2 on AIX 3.  Now, shared libraries
-  can be built with all working versions of GCC.
-* New rules for AM_PROG_LD to use gcc's -print-prog-name flag in order
-  to find ld, if possible.
+* Suppress duplicate compiler output during `compile' mode.
+* New `execute' mode to support debugging uninstalled libtool
+  libraries and executables.
 * Deleted `dlname' mode.  Dlopen applications should only use the
   runtime search method described in (libtool)Finding the dlname.
 * Experimental support for dynamically loaded modules, even on
-  static-only platforms, via new `-dlopen' and `-pre-dlopen' link
+  static-only platforms, via new `-dlopen' and `-dlpreopen' link
   flags.
-* New tests for a BSD-compatible `nm' program, required for dlopened
-  modules.
+* New rules for AM_PROG_LD to use gcc's -print-prog-name flag in order
+  to find ld, if possible.
+* Full support for broken collect2 on AIX 3.  Shared libraries
+  can now be built with all working versions of GCC.
 * Allow configure.in to change the defaults for AM_PROG_LIBTOOL's
-  `--enable-{shared,static}' by setting `enable_{shared,static}=no'.
-* Suppress duplicate compiler output during `compile' mode.
+  `--enable-shared' and `--enable-static' flags by setting
+  the `enable_shared' or `enable_static' shell variables to `no'.
 
 New in 1.0:
 * Bug fixes.
