--- a/tests/ChangeLog
+++ b/tests/ChangeLog
@@ -1,3 +1,7 @@
+Tue Aug 26 13:39:40 1997  Gordon Matzigkeit  <gord@gnu.ai.mit.edu>
+
+	* quote.test: New torture test for libtool metacharacter quoting.
+
 Thu Aug 14 09:30:29 1997  Gordon Matzigkeit  <gord@gnu.ai.mit.edu>
 
 	* suffix.test (extensions): Added Objective C extension, `.m'.
