--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -612,7 +612,9 @@ Now that's significantly cooler@dots{} libtool just ran an obscure
 @code{ld} command to create a shared library, as well as the static
 library.
 
-@cindex @file{@value{objdir}} subdirectory
+@c FIXME: TeX cannot handle @value{objdir} in an index entry
+@cindex @file{_libs} subdirectory
+@c @cindex @file{@value{objdir}} subdirectory
 Note how libtool creates extra files in the @file{@value{objdir}}
 subdirectory, rather than the current directory.  This feature is to
 make it easier to clean up the build directory, and to help ensure that
