--- a/tests/ChangeLog
+++ b/tests/ChangeLog
@@ -1,3 +1,13 @@
+Tue Oct  7 10:48:37 1997  Gordon Matzigkeit  <gord@gnu.ai.mit.edu>
+
+	* hardcode.test (hardcode_libdir_flag_spec): Check the hardcoding
+	properties of the flag_spec, too.
+
+Sun Sep 21 13:17:00 1997  Gordon Matzigkeit  <gord@gnu.ai.mit.edu>
+
+	* defs, Makefile.am (clean-local): Change =inst to _inst to fix
+ 	portability on MS-DOS.  From Robert Hoehne.
+
 Mon Sep 15 07:14:37 1997  Gordon Matzigkeit  <gord@gnu.ai.mit.edu>
 
 	* hardcode.test (objdir): New variable to simplify change from
