--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,10 @@
 NEWS - list of user-visible changes between releases of GNU libtool.
 
-New in 1.0c:
+New in 1.0d:
 * Bug fixes.
 * Portability fixes for Windows NT.
-* Change the libtool temporary directory from `.libs' to `_libs' in
-  order to cope with MS-DOS filenames.  See README-alpha.
+* Maybe use `_libs' as a temporary libtool directory instead of `.libs'
+  in order to cope with MS-DOS filenames.  See README-alpha.
 * New `-all-static' flag to prevent any dynamic linking.  The regular
   `-static' flag just prevents dynamic linking of libtool libraries.
 * The `-rpath' flag can be used to hardcode absolute directories when
